--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint \"**/*.{js,jsx}\"",
-    "lint-fix": "eslint --fix"
+    "lint-fix": "eslint --fix \"**/*.{js,jsx}\""
   },
   "eslintConfig": {
     "extends": [
