--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
         "quotes": [
             "error",
             "single"
-        ]
+        ],
+        "operator-linebreak": "off"
     }
 }
