--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,7 @@
         "prettier"
     ],
     "rules": {
-        "linebreak-style": ["error", "windows"],
+        "linebreak-style": ["error", "unix"],
         "react/jsx-uses-react": "off",
         "react/react-in-jsx-scope": "off",
         "react/jsx-props-no-spreading": ["warn"],
