--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
         "react/jsx-uses-react": "off",
         "react/react-in-jsx-scope": "off",
         "react/jsx-props-no-spreading": ["warn"],
+        "no-param-reassign" :0,
         "quotes": [
             "error",
             "single"
