--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint \"**/*.{js,jsx}\"",
-    "lint-fix": "eslint --fix \"**/*.{js,jsx}\""
+    "lint-fix": "eslint --fix \"src/**/*.{js,jsx}\""
   },
   "eslintConfig": {
     "extends": [
