--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,15 +6,17 @@ on:
       - main
 
 jobs:
-  lint:
+  eslint:
     name: Run linter and formatter
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
       - name: ESLint
+        run: npm ci
         run: npm run lint-fix
-      - name: Prettier
-        run: npm run format-fix
   test:
     name: Run tests
     runs-on: ubuntu-latest
