--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
+      - name: Install packages
         run: npm ci
+      - name: Prettier
+        run: npm run format-fix
       - name: ESLint
         run: npm run lint-fix
-        
