--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  eslint:
+  ci:
     name: Run linter and formatter
     runs-on: ubuntu-latest
     steps:
@@ -17,10 +17,5 @@ jobs:
         run: npm run format-fix
       - name: ESLint
         run: npm run lint-fix
-  test:
-    name: Run tests
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - run: npm test
-      
+      - name: Unit tests
+        run: npm test
