ci: removes bump version

--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -5,9 +5,8 @@ on:
     branches:
       -main
 
-jobs:
-  version:
-    name: Check for Version Bump
+jobs: 
+  run-build-if-needed:
     runs-on: ubuntu-latest
     steps:
     - uses: MontyD/package-json-updated-action
@@ -16,11 +15,11 @@ jobs:
         path: package.json
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v1
       if: steps.version-updated.outputs.has-updated
       with:
-        fetch-depth: 0
-    - uses: actions/setup-node@v3
+        fetch-depth: 1
+    - uses: actions/setup-node@v1
       if: steps.version-updated.outputs.has-updated
       with:
         node-version: '12.x'
@@ -28,11 +27,3 @@ jobs:
       if: steps.version-updated.outputs.has-updated
     - run: npm run build
       if: steps.version-updated.outputs.has-updated
-      - uses: gfellerph/package-json-version-check@v1.0.0-alpha.2
-  bump:
-      - name: Bump Version
-      - uses: remorses/bump-version@v8
-        with: 
-          version_file: ./package.json
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN}}
