--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@emotion/core": "^11.0.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.15",
     "@mui/material": "^5.10.12",
     "@mui/x-data-grid": "^5.17.11",
     "@testing-library/jest-dom": "^5.16.5",
