--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,9 +39,13 @@ jobs:
           echo "Version is bumped"
       - name: Install packages
         run: npm ci
-      - name: Prettier
+      - name: Check format
+        run: npm run format
+      - name: Check code style
+        run: npm run lint
+      - name: Run Prettier
         run: npm run format-fix
-      - name: ESLint
+      - name: Run ESLint
         run: npm run lint-fix
       - name: Unit tests
         run: npm test
