--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,10 +6,12 @@
         "jest": true
     },
     "extends": [
+        "eslint:recommended",
         "plugin:react/recommended",
         "react-app",
         "react-app/jest",
-        "airbnb"
+        "airbnb",
+        "prettier"
     ],
     "overrides": [
     ],
@@ -19,6 +21,7 @@
     },
     "plugins": [
         "react",
+        "react-hooks",
         "prettier"
     ],
     "rules": {
