--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
         "react/jsx-uses-react": "off",
         "react/react-in-jsx-scope": "off",
         "react/no-unstable-nested-components": "off",
+        "react-hooks/exhaustive-deps": "off",
         "react/jsx-props-no-spreading": "off",
         "quotes": [
             "error",
