--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.27.2",
     "cors": "^2.8.5",
     "jest-fetch-mock": "^3.0.3",
     "luxon": "^3.1.0",
@@ -78,6 +77,7 @@
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
+    "pretty-bytes": "^6.0.0",
     "react-select-event": "^5.5.1",
     "react-test-renderer": "^18.2.0"
   }
