--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "cors": "^2.8.5",
+    "filesize": "^10.0.6",
     "jest-fetch-mock": "^3.0.3",
     "luxon": "^3.1.0",
-    "pretty-bytes": "^6.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
